--- a/Parquet.Data.Ado/Parquet.Data.Ado.csproj
+++ b/Parquet.Data.Ado/Parquet.Data.Ado.csproj
@@ -54,6 +54,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Parquet.Data.Ado.ico" />
+    <None Include="Parquet.Data.Ado.png" Pack="true" PackagePath="\" />
+    <None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
