--- a/Parquet.Data.Ado/Parquet.Data.Ado.csproj
+++ b/Parquet.Data.Ado/Parquet.Data.Ado.csproj
@@ -56,6 +56,7 @@
     <Content Include="Parquet.Data.Ado.ico" />
     <None Include="Parquet.Data.Ado.png" Pack="true" PackagePath="\" />
     <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="RELEASE_NOTES.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
